<resources>
    <string name="Url_AppBase">http://www.xynetweb.cn:8090</string>
    <string name="Url_XynetWebBase">http://www.xynetweb.cn:8090</string>
    <string name="Url_checkYhmByjqbh">/service-machine/marketingProgaram/checkYhmByjqbh</string>
    <string name="Url_contactlists">/service-app/shjapp/contactlists</string>
    <string name="Url_getMachineAllGood">/service-app/shjty/getMachineAllGood</string>
    <string name="Url_printTemplate">/service-machine/jqxppz/printTemplate</string>
    <string name="Url_zfbFacepaySmileInit">/service-pay/pay/smile/init</string>
    <string name="Url_zfbFacepaySmilePay">/service-pay/pay/smile/pay</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_location">接入位置</string>
    <string name="action">动作</string>
    <string name="active_page_url">活动页网址</string>
    <string name="activity">活动</string>
    <string name="activity_picture">活动图片</string>
    <string name="ad_player">广告播放器</string>
    <string name="ad_value_of_elevator_testing_tube">升降台检测管AD值:</string>
    <string name="ad_value_of_microwave_oven_test_tube">微波炉检测管AD值:</string>
    <string name="add_to_shop_car">加入购物车</string>
    <string name="adjustment">调整</string>
    <string name="after_sale_telephone">售后电话</string>
    <string name="airport">机场</string>
    <string name="all_machine">整机</string>
    <string name="always_heating">盒饭总是加热</string>
    <string name="ambient_humidity">环境湿度</string>
    <string name="ambient_temperature">环境温度</string>
    <string name="android">安卓机</string>
    <string name="android_setting">打开安卓系统设置</string>
    <string name="annual_sales">年销售额</string>
    <string name="app_copyright" />
    <string name="app_name">冰淇淋</string>
    <string name="app_name_setting">售货机设置</string>
    <string name="app_setting">App设置</string>
    <string name="at_down">在底部</string>
    <string name="at_left">在左边</string>
    <string name="at_right">在右边</string>
    <string name="at_top">在顶部</string>
    <string name="auto_refund">出杯失败系统自动退款</string>
    <string name="auto_stop">自动停机</string>
    <string name="auto_to_activity">空闲时间自动转到活动页面</string>
    <string name="auto_upgrade">自动升级</string>
    <string name="automatic_testing">自动测试</string>
    <string name="auxiliary_engine">副机</string>
    <string name="available_stock">可售库存</string>
    <string name="back">返回</string>
    <string name="backstage_count">后台库存</string>
    <string name="backups_shj_app">备份APP至U盘</string>
    <string name="backups_success_tip">已备份到U盘xyShj目录</string>
    <string name="backupsing">备份中...</string>
    <string name="backward">向后</string>
    <string name="bank_machine">格子机</string>
    <string name="bank_machine_auxiliary">格子副柜</string>
    <string name="bank_sync">整机同步</string>
    <string name="banknote">纸币器</string>
    <string name="banknote_change_of_money">零钱设置</string>
    <string name="banknote_change_of_money_tip">纸币器收币最低零钱(元)</string>
    <string name="banknote_collecting_mode">收币模式</string>
    <string name="banknote_diagnosis">纸币器诊断</string>
    <string name="banknote_give_change">纸币找零</string>
    <string name="banknote_give_change_input_tip">请输入找零张数</string>
    <string name="banknote_give_change_tip">查询纸币张数</string>
    <string name="banknote_receive_face_value">最大接收面值</string>
    <string name="baud_rate">波特率</string>
    <string name="be_not_in">不在</string>
    <string name="belt_mode">皮带模式</string>
    <string name="belt_setting">皮带设置</string>
    <string name="blocked">卡货</string>
    <string name="box">(格子)</string>
    <string name="box_lunch_machine">盒饭机</string>
    <string name="box_pulse_number">盒子脉冲数</string>
    <string name="box_rice_machine_cabinet_setting">盒饭机机柜设置</string>
    <string name="box_sensitivity_settings">盒子灵敏度设置</string>
    <string name="box_spacing_lunch_box">货道盒子间距</string>
    <string name="box_speed_settings">升降机水平速度设置</string>
    <string name="bql_leek">冰淇淋不足</string>
    <string name="bql_making">冰淇淋正在制糕,可能要等几分钟...</string>
    <string name="bql_no_cup">缺纸杯</string>
    <string name="bql_picout">请取出冰淇淋,等5秒</string>
    <string name="bql_shj_error">冰淇淋机状态异常</string>
    <string name="bql_status_check_failed">冰淇淋状态检测失败</string>
    <string name="bql_status_clean">冰淇淋机处于清洗状态</string>
    <string name="bql_status_mdb_connecting">正在连接读卡器, 请稍后再试</string>
    <string name="bql_status_restarting">冰淇淋机正在重启</string>
    <string name="bql_status_stoped">冰淇淋机处于停止状态</string>
    <string name="bql_status_stoped_overheat">冰淇淋机处于停止状态 温度过高</string>
    <string name="bql_status_xiumiang">冰淇淋机处于休眠状态,已暂停销售</string>
    <string name="bql_stop_zhigao">冰淇淋自动停止制糕时段设置</string>
    <string name="bql_stork_no">冰淇淋机库存不足（欠料）</string>
    <string name="bql_unconnect">冰淇淋未连接</string>
    <string name="bql_yhje">优惠金额</string>
    <string name="bql_zhigao_percent">冰淇淋制糕比例设置</string>
    <string name="bql_zhigao_percent_allow">允许出糕比例 40~100</string>
    <string name="bql_zhigao_percent_notice">制糕中提醒比例 20~80</string>
    <string name="bqlseterror">没有设置自由搭配冰淇淋</string>
    <string name="button_banlance">查余额</string>
    <string name="button_cancel">取消</string>
    <string name="button_close">关闭</string>
    <string name="button_delete">删除</string>
    <string name="button_done">确定</string>
    <string name="button_exitnow">直接退出</string>
    <string name="button_modifynow">立即修改</string>
    <string name="button_ok">确认</string>
    <string name="button_ok2">确定(需重启APP)</string>
    <string name="button_ok3">确定</string>
    <string name="button_onekeyset">一键设置</string>
    <string name="button_onekeyset_error">一键设置的商品信息错误</string>
    <string name="button_open">打开</string>
    <string name="button_restartnow">立即重启</string>
    <string name="button_test">测试</string>
    <string name="button_topup">充值</string>
    <string name="button_tosetting">设置(一键设置)</string>
    <string name="button_uninstall">卸载</string>
    <string name="button_update">系统更新</string>
    <string name="cabinet_number">机柜号</string>
    <string name="cabinet_number_tip">机柜编号</string>
    <string name="cabinet_temperature">机柜温度</string>
    <string name="cake_making">制糕设置</string>
    <string name="calculate_auto">自动盘点</string>
    <string name="calculate_count">计算库存</string>
    <string name="calculate_count_auto">自动计算库存</string>
    <string name="calculated_inventory">库存盘点</string>
    <string name="calculateing">正在计算...</string>
    <string name="calibration_heating_setting">制冷与加热设置</string>
    <string name="call_phone">拨打电话</string>
    <string name="camara_can_not_use">摄像头不可用</string>
    <string name="camera_pid_vid">所有摄像头PID与VID</string>
    <string name="camera_takeinterval">是否自动拍照</string>
    <string name="camera_test">摄像头监控</string>
    <string name="can_cup_count">请输入可出杯数</string>
    <string name="cancel">取消</string>
    <string name="cannot_buy">不能购买</string>
    <string name="card_cargo_clearance">卡货货道清除</string>
    <string name="card_cargo_clearance_tip">查询卡货货道</string>
    <string name="card_cargo_turn_to_4_circle_clearance">卡货转1/4圈清除</string>
    <string name="card_cargo_turn_to_4_circle_clearance_tip">卡货转1/4圈货道</string>
    <string name="card_pay">刷卡支付</string>
    <string name="card_reader">读卡器</string>
    <string name="cargo_capacity">货道容量</string>
    <string name="cargo_card_setup">货道卡货设置</string>
    <string name="cargo_clearance">清除</string>
    <string name="cargo_code">商品编码</string>
    <string name="cargo_linkage">货道联动</string>
    <string name="cargo_linkage_info">货道联动信息</string>
    <string name="cargo_loop_test">货道循环测试</string>
    <string name="cargo_management_other">货道设置与测试</string>
    <string name="cargo_number">货道号</string>
    <string name="cargo_routing">货道选货</string>
    <string name="cargo_way_mode">货道模式</string>
    <string name="cargo_way_normal">货道正常</string>
    <string name="cargolane_invalid">货道无效</string>
    <string name="check_count">盘点库存</string>
    <string name="check_other_app_traffic_tip">查看其它APP流量方法：系统设置=&gt;打开安卓系统设置=&gt;流量使用情况</string>
    <string name="check_update">检查更新</string>
    <string name="circle_setting">卡货转1/4圈设置</string>
    <string name="classic_ice_cream">经典套餐</string>
    <string name="classic_select">经典搭配</string>
    <string name="clean_check">清洗检查</string>
    <string name="delete">删除</string>
    <string name="delete_item_tip">请勾选需要删除的文件</string>
    <string name="download_goods_pic">下载商品图片</string>
    <string name="download_merchandise_detailpictures">下载商品详情图片</string>
    <string name="goods_length">商品长度</string>
    <string name="heating">加热</string>
    <string name="lab_name">名称</string>
    <string name="lab_onekeyset">商品一键设置</string>
    <string name="lab_price">价格</string>
    <string name="lab_shelf">货道</string>
    <string name="local_count">设备库存</string>
    <string name="login">登录</string>
    <string name="not_file">没有文件</string>
    <string name="number_of_cargo_lanes">卡货货道</string>
    <string name="pls_input_password">请输入密码</string>
    <string name="replennishment_target">已补/任务补货数量</string>
    <string name="select_heating_or_unheating">您的商品需要加热吗？</string>
    <string name="target_count">当前/目标库存</string>
    <string name="tip">提示</string>
    <string name="traffic_day">当日流量:</string>
    <string name="traffic_month">当月流量:</string>
    <string name="unheated">不加热</string>
    <string name="update_password">修改密码</string>
</resources>