<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_shelf"
        android:layout_width="@dimen/x100"
        android:layout_height="wrap_content"
        android:text="@string/lab_shelf"
        style="@style/check_count"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="@dimen/x200"
        android:layout_height="wrap_content"
        android:text="@string/lab_name"
        style="@style/check_count"/>
    <TextView
        android:id="@+id/tv_lenth"
        android:layout_width="@dimen/x120"
        android:layout_height="wrap_content"
        android:text="@string/goods_length"
        style="@style/check_count"/>
    <TextView
        android:id="@+id/tv_replennishment_target"
        android:layout_width="@dimen/x300"
        android:layout_height="wrap_content"
        android:text="@string/replennishment_target"
        style="@style/check_count"/>
    <TextView
        android:id="@+id/tv_target_count"
        android:layout_width="@dimen/x240"
        android:layout_height="wrap_content"
        android:text="@string/target_count"
        style="@style/check_count"/>
</LinearLayout>
