<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/traffic_day"
            android:layout_centerVertical="true"
            style="@style/normal_text"/>
        <TextView
            android:gravity="left"
            android:id="@+id/tv_current_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_cargo_lanes"
            android:layout_centerVertical="true"
            style="@style/normal_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/traffic_month"
            android:layout_centerVertical="true"
            style="@style/normal_text"/>
        <TextView
            android:gravity="left"
            android:id="@+id/tv_current_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_cargo_lanes"
            android:layout_centerVertical="true"
            style="@style/normal_text"/>
    </LinearLayout>
    <TextView
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_other_app_traffic_tip"
        android:layout_centerVertical="true"
        style="@style/normal_text"/>
</LinearLayout>
