<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/select_dialog_bg"
    android:paddingLeft="10px"
    android:paddingRight="10px"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="@dimen/text_normal"
        android:textColor="@color/color_text"
        android:gravity="center"
        android:id="@+id/swippay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y40"
        android:text="@string/tip"/>
    <TextView
        android:textSize="@dimen/text_small"
        android:textColor="@color/color_text"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/x500"
        android:minHeight="@dimen/y120"
        android:text="@string/select_heating_or_unheating"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/x45"
        android:paddingTop="@dimen/y20"
        android:paddingRight="@dimen/x45"
        android:paddingBottom="@dimen/y20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <Button
            android:textSize="@dimen/text_size_lsmall"
            android:textColor="@android:color/white"
            android:id="@+id/bt_heating"
            android:background="@drawable/heating_background"
            android:layout_width="0dp"
            android:layout_height="@dimen/y56"
            android:text="@string/heating"
            android:layout_weight="1"/>
        <Button
            android:textSize="@dimen/text_size_lsmall"
            android:textColor="@android:color/white"
            android:id="@+id/bt_unheating"
            android:background="@drawable/heating_no_background"
            android:layout_width="0dp"
            android:layout_height="@dimen/y56"
            android:layout_marginLeft="@dimen/x42"
            android:text="@string/unheated"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
