<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/select_dialog_bg"
    android:padding="@dimen/x20"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="@dimen/text_normal"
        android:textColor="@color/setting_white"
        android:gravity="center"
        android:id="@+id/tv_download_detail"
        android:background="@drawable/selector_button_blue"
        android:paddingLeft="@dimen/x12"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:text="@string/download_merchandise_detailpictures"/>
    <TextView
        android:textSize="@dimen/text_normal"
        android:textColor="@color/setting_white"
        android:gravity="center"
        android:id="@+id/tv_download_goods"
        android:background="@drawable/selector_button_blue"
        android:paddingLeft="@dimen/x12"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:layout_marginTop="@dimen/y20"
        android:text="@string/download_goods_pic"/>
    <TextView
        android:textSize="@dimen/text_normal"
        android:textColor="@color/setting_white"
        android:gravity="center"
        android:id="@+id/tv_onekeyset"
        android:background="@drawable/selector_button_blue"
        android:paddingLeft="@dimen/x12"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:layout_marginTop="@dimen/y20"
        android:text="@string/lab_onekeyset"/>
</LinearLayout>
