<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/select_dialog_bg"
    android:fitsSystemWindows="true"
    android:layout_width="@dimen/x600"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="@dimen/text_size_lsmall"
        android:textStyle="bold"
        android:textColor="@color/color_text"
        android:gravity="center"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:text="@string/app_name_setting"/>
    <TextView
        android:textSize="@dimen/text_xsmall"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"
        android:gravity="center"
        android:id="@+id/tv_error_tip"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:textSize="@dimen/text_size_lsmall"
        android:textColor="@color/color_text"
        android:gravity="center"
        android:id="@+id/et_password"
        android:paddingLeft="@dimen/x20"
        android:paddingRight="@dimen/x20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dailog_button_normal_height"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:hint="@string/pls_input_password"
        android:password="true"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/x20"
        android:paddingTop="@dimen/y20"
        android:paddingRight="@dimen/x20"
        android:paddingBottom="@dimen/y20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x8"
        android:layout_marginRight="@dimen/x8">
        <Button
            android:textSize="@dimen/text_size_lsmall"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/button01"
            android:background="@drawable/selector_dialog_tip_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/dailog_button_normal_height"
            android:text="@string/login"
            android:layout_weight="1"/>
        <Button
            android:textSize="@dimen/text_size_lsmall"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/button02"
            android:background="@drawable/selector_dialog_tip_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/dailog_button_normal_height"
            android:layout_marginLeft="@dimen/x20"
            android:text="@string/update_password"
            android:layout_weight="1"/>
        <Button
            android:textSize="@dimen/text_size_lsmall"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/button03"
            android:background="@drawable/selector_dialog_tip_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/dailog_button_normal_height"
            android:layout_marginLeft="@dimen/x20"
            android:text="@string/cancel"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
