<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/select_dialog_bg"
    android:paddingLeft="10px"
    android:paddingRight="10px"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="@dimen/text_normal"
        android:textColor="@color/color_text"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:text="@string/delete_item_tip"/>
    <View
        android:background="#cccccc"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10px"/>
    <TextView
        android:textSize="@dimen/text_normal"
        android:textColor="@color/color_text"
        android:gravity="center"
        android:id="@+id/tv_no_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:text="@string/not_file"/>
    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/y500"/>
    <View
        android:background="#cccccc"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="10px"
        android:paddingRight="20dp"
        android:paddingBottom="10px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <Button
            android:textSize="@dimen/text_small"
            android:textColor="#fff"
            android:id="@+id/bt_cancel"
            android:background="@drawable/selector_dialog_tip_button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="0dp"
            android:layout_height="@dimen/dailog_button_normal_height"
            android:text="@string/button_cancel"
            android:layout_weight="1"/>
        <Button
            android:textSize="@dimen/text_small"
            android:textColor="#fff"
            android:id="@+id/bt_ok"
            android:background="@drawable/selector_dialog_tip_button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="0dp"
            android:layout_height="@dimen/dailog_button_normal_height"
            android:layout_marginLeft="30dp"
            android:text="@string/delete"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
