<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_shelf"
        android:layout_width="@dimen/x100"
        android:layout_height="wrap_content"
        android:text="@string/lab_shelf"
        style="@style/check_count"/>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="@dimen/x200"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/text_xnormal"
            android:textColor="@color/color_text"
            android:ellipsize="end"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lab_name"
            android:singleLine="true"/>
        <TextView
            android:textSize="@dimen/text_xnormal"
            android:textColor="@color/color_text"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/tv_batch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_lenth"
        android:layout_width="@dimen/x150"
        android:layout_height="wrap_content"
        android:text="@string/goods_length"
        style="@style/check_count"/>
    <TextView
        android:id="@+id/tv_local_count"
        android:layout_width="@dimen/x150"
        android:layout_height="wrap_content"
        android:text="@string/local_count"
        style="@style/check_count"/>
    <TextView
        android:id="@+id/tv_net_count"
        android:layout_width="@dimen/x150"
        android:layout_height="wrap_content"
        android:text="@string/backstage_count"
        style="@style/check_count"/>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="@dimen/x210"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x50">
            <Button
                android:textSize="@dimen/text_normal"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/bt_reduce"
                android:background="@drawable/reduce"
                android:layout_width="@dimen/x42"
                android:layout_height="@dimen/x42"/>
            <TextView
                android:textSize="@dimen/text_small"
                android:textColor="@color/color_text"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tv_check_count"
                android:layout_width="@dimen/x60"
                android:layout_height="wrap_content"/>
            <Button
                android:textSize="@dimen/text_normal"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/bt_add"
                android:background="@drawable/add"
                android:layout_width="@dimen/x42"
                android:layout_height="@dimen/x42"/>
        </LinearLayout>
        <TextView
            android:textSize="@dimen/text_xsmall"
            android:textColor="@color/color_red"
            android:gravity="center"
            android:id="@+id/tv_error_info"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
